--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +34,7 @@
         .form-container {
             background-color: white;
             padding: 30px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             height: fit-content;
         }
 
@@ -104,15 +105,15 @@
         .receipt-container {
             background-color: white;
             padding: 40px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         .header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding-bottom: 20px;
-            border-bottom: 1px solid #e0e0e0;
+            padding-bottom: 15px;
+            border-bottom: 2px solid #e0e0e0;
         }
 
         .logo {
@@ -133,7 +134,7 @@
             font-size: 24px;
             font-weight: 400;
             color: #000;
-            margin: 30px 0 10px 0;
+            margin: 32px 0 24px 0;
         }
 
         .subtitle {
@@ -147,7 +148,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 20px 0;
-            border-bottom: 1px solid #e0e0e0;
+            border-bottom: 2px solid #e0e0e0;
         }
 
         .total-label {
@@ -157,7 +158,7 @@
         }
 
         .total-value {
-            font-size: 24px;
+            font-size: 18px;
             font-weight: 500;
             color: #000;
         }
@@ -207,7 +208,7 @@
         }
 
         .payment-section {
-            padding: 20px 0;
+            padding: 24px 0;
             border-bottom: 1px solid #e0e0e0;
         }
 
@@ -244,7 +245,8 @@
         }
 
         .payment-details {
-            font-size: 14px;
+            font-size: 16px;
+            margin-bottom: 6px;
             color: #000;
         }
 
@@ -265,26 +267,37 @@
         }
 
         .link-section a {
-            color: #0066cc;
-            text-decoration: none;
+            color: rgb(0 96 223);
+            /* text-decoration: none; */
+        }
+
+        .link-section a:hover {
+            color: rgb(0 96 223);
+            background-color: rgba(255, 255, 0, 0.329);
+
         }
 
         .trip-section {
-            padding: 20px 0;
-            border-bottom: 1px solid #e0e0e0;
+            padding: 24px 0;
+            /* border-bottom: 1px solid #e0e0e0; */
         }
 
         .trip-title {
-            font-size: 14px;
+            font-size: 12px;
             font-weight: 500;
             color: #000;
-            margin-bottom: 5px;
+            margin-bottom: 24px;
         }
 
         .trip-info {
             font-size: 12px;
             color: #666;
             margin-bottom: 15px;
+            /* max-width: 26ch; */
+        }
+
+        .trip-info span {
+            color: #000;
         }
 
         .location-row {
@@ -350,23 +363,26 @@
         }
 
         .footer-note {
-            padding: 20px 0;
-            font-size: 12px;
+            padding: 0px 0;
+            font-size: 10px;
             color: #666;
-            line-height: 1.5;
+            line-height: 1.2;
         }
 
         @media print {
             .form-container {
                 display: none;
             }
+
             .container {
                 grid-template-columns: 1fr;
             }
+
             body {
                 background-color: white;
                 padding: 0;
             }
+
             .receipt-container {
                 box-shadow: none;
             }
@@ -379,6 +395,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <div class="form-container">
@@ -438,7 +455,8 @@
                 </div>
                 <div class="form-group">
                     <label>Endereço de Partida</label>
-                    <input type="text" id="startAddress" value="R. Teles, 129 - Campinho, Rio de Janeiro - RJ, 00000-000, Brasil">
+                    <input type="text" id="startAddress"
+                        value="R. Teles, 129 - Campinho, Rio de Janeiro - RJ, 00000-000, Brasil">
                 </div>
                 <div class="form-group">
                     <label>Horário de Chegada</label>
@@ -446,7 +464,8 @@
                 </div>
                 <div class="form-group">
                     <label>Endereço de Chegada</label>
-                    <input type="text" id="endAddress" value="Av. dos Democráticos, 1322 - Higienópolis, Rio de Janeiro - RJ, 21050-144, Brasil">
+                    <input type="text" id="endAddress"
+                        value="Av. dos Democráticos, 1322 - Higienópolis, Rio de Janeiro - RJ, 21050-144, Brasil">
                 </div>
                 <button type="button" class="btn-generate" onclick="generateReceipt()">Gerar Recibo</button>
                 <button type="button" class="btn-print" onclick="window.print()">Imprimir/Salvar PDF</button>
@@ -514,25 +533,28 @@
 
             <div class="trip-section">
                 <div class="trip-title" id="displayDriverName">Você viajou com Denilson</div>
-                <div class="trip-info" id="displayTripInfo">UberX 11.79 Quilômetros | 14 minutos</div>
+                <div class="trip-info" id="displayTripInfo"><b>UberX</b> 11.79 Quilômetros | 14 minutos</div>
                 <div class="location-row">
                     <div class="location-icon"></div>
                     <div class="location-details">
                         <span class="location-time" id="displayStartTime">20:46 |</span>
-                        <span class="location-address" id="displayStartAddress">R. Teles, 129 - Campinho, Rio de Janeiro - RJ, 00000-000, Brasil</span>
+                        <span class="location-address" id="displayStartAddress">R. Teles, 129 - Campinho, Rio de Janeiro
+                            - RJ, 00000-000, Brasil</span>
                     </div>
                 </div>
                 <div class="location-row">
                     <div class="location-icon"></div>
                     <div class="location-details">
                         <span class="location-time" id="displayEndTime">21:01 |</span>
-                        <span class="location-address" id="displayEndAddress">Av. dos Democráticos, 1322 - Higienópolis, Rio de Janeiro - RJ, 21050-144, Brasil</span>
+                        <span class="location-address" id="displayEndAddress">Av. dos Democráticos, 1322 - Higienópolis,
+                            Rio de Janeiro - RJ, 21050-144, Brasil</span>
                     </div>
                 </div>
             </div>
 
             <div class="footer-note">
-                O preço de serviço não inclui taxas que possam ser cobradas pelo seu banco. Entre em contato diretamente com o seu banco para mais informações.
+                O preço de serviço não inclui taxas que possam ser cobradas pelo seu banco. Entre em contato diretamente
+                com o seu banco para mais informações.
             </div>
         </div>
     </div>
@@ -583,7 +605,7 @@
             document.getElementById('displayPaymentDateTime').textContent = paymentDateTime;
             document.getElementById('displayPaymentAmount').textContent = `R$ ${formatValue(total)}`;
             document.getElementById('displayDriverName').textContent = `Você viajou com ${driverName}`;
-            document.getElementById('displayTripInfo').textContent = `${tripType} ${distance} Quilômetros | ${duration} minutos`;
+            document.getElementById('displayTripInfo').innerHTML = `<span>${tripType}</span> ${distance} Quilômetros | ${duration} <br> minutos`;
             document.getElementById('displayStartTime').textContent = `${startTime} |`;
             document.getElementById('displayStartAddress').textContent = startAddress;
             document.getElementById('displayEndTime').textContent = `${endTime} |`;
@@ -594,4 +616,5 @@
         window.onload = generateReceipt;
     </script>
 </body>
+
 </html>
