--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Gerador de Recibo Uber</title>
     <style>
         :root {
+            --primary-color: #4d4df3;
             --black-900: #000;
             --black-600: #808080;
             --black-300: #e0e0e0;
@@ -52,8 +53,12 @@
             background-color: var(--white-100);
         }
 
-        .header,
+
         .total-section {
+            border-bottom: 2px solid var(--black-900);
+        }
+
+        .header {
             border-bottom: 2px solid var(--black-300);
         }
 
@@ -81,7 +86,7 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, sans-serif;
             background-color: #f5f5f5;
-            padding: 20px;
+            padding: 16px;
         }
 
         .container {
@@ -157,11 +162,12 @@
         }
 
         .btn-print:hover {
-            background-color: var(--primary-color-dark);
+            opacity: 0.8;
         }
 
         .receipt-container {
-            padding: 40px;
+            padding-inline: 112px;
+            padding-block: 64px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
