--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
     <title>Gerador de Recibo Uber</title>
     <style>
         :root {
-            --primary-color: #4d4df3;
+            --primary-color: #2c2cf0;
             --black-900: #000;
             --black-600: #595959;
             --black-300: #e0e0e0;
             --black-100: #f5f5f5;
             --white-100: #ffffff;
+
+            font-size: 12px;
         }
 
         .form-container h2,
+        .breakdown-label.subtotal,
         .btn-generate,
         .title,
         .total-label,
         .total-value,
-        .breakdown-label,
         .breakdown-value,
         .payment-title,
         .payment-details,
@@ -32,6 +34,7 @@
         }
 
         #displayFixedCost,
+        .breakdown-label,
         .detail-value,
         .form-group label,
         .date,
@@ -55,11 +58,11 @@
 
 
         .total-section {
-            border-bottom: 1.5px solid var(--black-900);
+            border-bottom: 0.09375rem solid var(--black-900);
         }
 
         .header {
-            border-bottom: 2px solid var(--black-300);
+            border-bottom: 0.125rem solid var(--black-300);
         }
 
         .location-row:first-of-type .location-icon::after {
@@ -69,7 +72,7 @@
         .details-section,
         .breakdown-section,
         .payment-section {
-            border-bottom: 1px solid #e0e0e0;
+            border-bottom: 0.0625rem solid #e0e0e0;
         }
 
         @page {
@@ -89,45 +92,45 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, sans-serif;
             background-color: #f5f5f5;
-            padding: 16px;
+            padding: 1rem;
         }
 
         .container {
-            max-width: 1400px;
+            max-width: 87.5rem;
             margin: 0 auto;
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 20px;
+            gap: 1.25rem;
         }
 
         .form-container {
             background-color: white;
-            padding: 30px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            padding: 1.875rem;
+            box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
             height: fit-content;
         }
 
         .form-container h2 {
-            margin-bottom: 20px;
+            margin-bottom: 1.25rem;
         }
 
         .form-group {
-            margin-bottom: 15px;
+            margin-bottom: 0.9375rem;
         }
 
         .form-group label {
             display: block;
-            margin-bottom: 5px;
-            font-size: 14px;
+            margin-bottom: 0.3125rem;
+            font-size: 0.875rem;
             font-weight: 500;
         }
 
         .form-group input {
             width: 100%;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            font-size: 14px;
+            padding: 0.625rem;
+            border: 0.0625rem solid #ddd;
+            border-radius: 0.25rem;
+            font-size: 0.875rem;
         }
 
         .form-group input:focus {
@@ -137,14 +140,14 @@
 
         .btn-generate {
             width: 100%;
-            padding: 12px;
+            padding: 0.75rem;
             color: white;
             border: none;
-            border-radius: 4px;
-            font-size: 16px;
+            border-radius: 0.25rem;
+            font-size: 1rem;
             font-weight: 500;
             cursor: pointer;
-            margin-top: 20px;
+            margin-top: 1.25rem;
         }
 
         .btn-generate:hover {
@@ -153,15 +156,15 @@
 
         .btn-print {
             width: 100%;
-            padding: 12px;
+            padding: 0.75rem;
             background-color: var(--primary-color);
             color: white;
             border: none;
-            border-radius: 4px;
-            font-size: 16px;
+            border-radius: 0.25rem;
+            font-size: 1rem;
             font-weight: 500;
             cursor: pointer;
-            margin-top: 10px;
+            margin-top: 0.625rem;
         }
 
         .btn-print:hover {
@@ -169,20 +172,20 @@
         }
 
         .receipt-container {
-            padding-inline: 112px;
-            padding-block: 64px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            padding-inline: 7rem;
+            padding-block: 4rem;
+            box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
         }
 
         .header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding-bottom: 15px;
+            padding-bottom: 0.9375rem;
         }
 
         .logo {
-            height: 25px;
+            height: 1.5625rem;
         }
 
         .logo img {
@@ -191,57 +194,57 @@
         }
 
         .date {
-            font-size: 12px;
+            font-size: 0.75rem;
         }
 
         .title {
-            font-size: 24px;
+            font-size: 1.5rem;
             font-weight: 400;
-            margin: 32px 0 24px 0;
+            margin: 2rem 0 1.5rem 0;
         }
 
         .subtitle {
-            font-size: 14px;
-            margin-bottom: 30px;
+            font-size: 0.875rem;
+            margin-bottom: 1.875rem;
         }
 
         .total-section {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 20px 0;
+            padding: 1.25rem 0;
         }
 
         .total-label {
-            font-size: 18px;
+            font-size: 1.125rem;
             font-weight: 500;
         }
 
         .total-value {
-            font-size: 18px;
+            font-size: 1.125rem;
             font-weight: 500;
         }
 
         .details-section {
-            padding: 20px 0;
+            padding: 1.25rem 0;
         }
 
         .detail-row {
             display: flex;
             justify-content: space-between;
-            margin: 10px 0;
-            font-size: 14px;
+            margin: 0.625rem 0;
+            font-size: 0.875rem;
         }
 
         .breakdown-section {
-            padding: 20px 0;
+            padding: 1.25rem 0;
         }
 
         .breakdown-row {
             display: flex;
             justify-content: space-between;
-            margin: 8px 0;
-            font-size: 14px;
+            margin: 0.5rem 0;
+            font-size: 0.875rem;
         }
 
         .discount {
@@ -249,13 +252,13 @@
         }
 
         .payment-section {
-            padding: 24px 0;
+            padding: 1.5rem 0;
         }
 
         .payment-title {
-            font-size: 18px;
+            font-size: 1.125rem;
             font-weight: 500;
-            margin-bottom: 15px;
+            margin-bottom: 0.9375rem;
         }
 
         .payment-method {
@@ -267,50 +270,53 @@
         .payment-info {
             display: flex;
             align-items: flex-start;
-            gap: 10px;
+            gap: 0.625rem;
         }
 
         .payment-icon {
-            width: 30px;
-            height: 30px;
+            width: 1.875rem;
+            height: auto;
             /* background-color: var(--primary-color); */
-            border-radius: 4px;
+            border-radius: 0.25rem;
             display: flex;
             align-items: center;
             justify-content: center;
             color: white;
-            font-size: 12px;
+            font-size: 0.75rem;
             font-weight: bold;
             display: block;
+            margin-right: 1rem;
         }
 
         .payment-icon img {
             width: 100%;
             height: 100%;
             object-fit: contain;
+            border: 0.0625rem solid var(--black-300);
         }
 
         .payment-details {
-            font-size: 16px;
-            margin-bottom: 6px;
+            font-size: 1rem;
+            margin-bottom: 0.375rem;
         }
 
         .payment-date {
-            font-size: 12px;
+            font-size: 0.75rem;
         }
 
         .payment-amount {
-            font-size: 16px;
+            font-size: 1rem;
             font-weight: 500;
         }
 
         .link-section {
-            margin: 15px 0;
-            font-size: 13px;
+            margin: 0.9375rem 0;
+            font-size: 0.8125rem;
         }
 
         .link-section a {
             color: var(--primary-color);
+            font-weight: 600;
             /* text-decoration: none; */
         }
 
@@ -321,20 +327,24 @@
         }
 
         .trip-section {
-            padding: 24px 0;
+            padding: 1.5rem 0;
             /* border-bottom: 1px solid #e0e0e0; */
         }
 
         .trip-title {
-            font-size: 12px;
+            font-size: 0.75rem;
             font-weight: 500;
-            margin-bottom: 24px;
+            margin-bottom: 1.5rem;
         }
 
         .trip-info {
-            font-size: 12px;
-            margin-bottom: 15px;
+            font-size: 0.75rem;
+            margin-bottom: 0.9375rem;
             /* max-width: 26ch; */
+        }
+
+        .trip-info span {
+            margin-right: 1rem;
         }
 
         .location-wrapper {
@@ -344,10 +354,10 @@
         .location-wrapper::before {
             content: '';
             position: absolute;
-            width: 1.5px;
-            height: calc(100% - 24px);
+            width: 0.09375rem;
+            height: calc(100% - 1.5rem);
             background-color: var(--black-900);
-            left: calc(16px - 4.5px);
+            left: calc(1rem - 0.28125rem);
             top: 50%;
             transform: translateY(-50%);
         }
@@ -356,14 +366,14 @@
             display: flex;
             align-items: flex-start;
             align-items: center;
-            margin: 10px 0;
-            font-size: 13px;
+            margin: 0.625rem 0;
+            font-size: 0.8125rem;
         }
 
         .location-icon {
-            width: 24px;
-            height: 24px;
-            margin-right: 10px;
+            width: 1.5rem;
+            height: 1.5rem;
+            margin-right: 0.625rem;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -371,8 +381,8 @@
         }
 
         .location-icon .location-icon-dot {
-            width: 8px;
-            height: 8px;
+            width: 0.5rem;
+            height: 0.5rem;
             background-color: var(--black-900);
             position: relative;
             z-index: 2;
@@ -384,12 +394,12 @@
 
         .location-time {
             font-weight: 500;
-            margin-right: 5px;
+            margin-right: 0.3125rem;
         }
 
         .footer-note {
-            padding: 0px 0;
-            font-size: 10px;
+            padding: 0 0;
+            font-size: 0.870rem;
             line-height: 1.2;
         }
 
@@ -431,7 +441,7 @@
             }
         }
 
-        @media (max-width: 1024px) {
+        @media (max-width: 64rem) {
             .container {
                 grid-template-columns: 1fr;
             }
@@ -544,7 +554,7 @@
 
             <div class="breakdown-section">
                 <div class="breakdown-row">
-                    <span class="breakdown-label">Subtotal</span>
+                    <span class="breakdown-label subtotal">Subtotal</span>
                     <span class="breakdown-value" id="displaySubtotal">R$ 20,43</span>
                 </div>
                 <div class="breakdown-row">
